fix z-index

--- a/style.css
+++ b/style.css
@@ -140,7 +140,6 @@ svg {
   position: absolute;
   bottom: 18%;
   left: 50%;
-  z-index: 10000;
 
   transform: scale(0.7) translateX(calc(-50% / 0.7));
 
